--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "App\\": "src/"
         }
     },
-    "require": {},
+    "require": {
+        "twig/twig": "3.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "9"
     }
